package com.chk.designpattern.abstractFactory;

/**
 * @author changhongkai
 * @date 2018/12/14 下午2:28
 */
public abstract class CarColorAbstract {
    abstract public String getColor();
}
