package com.chk.designpattern.abstractFactory;

/**
 * @author changhongkai
 * @date 2018/12/14 下午2:24
 */
public abstract class CarTypeAbstract {
    abstract public String getType();
}
